# feedtui

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: claude-review.yml
docs/: FFI.md
examples/cpp/: Makefile  main.cpp  simple.c
include/: feedtui.h
src/: app.rs  config.rs  ffi.rs  lib.rs  main.rs
src/creature/: art.rs  mod.rs  persistence.rs
src/feeds/: github.rs  mod.rs  rss.rs  sports.rs  spotify.rs  youtube.rs
src/ui/: article_reader.rs  creature_menu.rs  mod.rs
src/ui/widgets/: creature.rs  github.rs  hackernews.rs  mod.rs  rss.rs  sports.rs  spotify.rs  stocks.rs  youtube.rs
