[package]
name = "feedtui"
version = "0.1.0"
edition = "2024"
description = "A configurable terminal dashboard for stocks, news, sports, and social feeds"
authors = ["malchal"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
feed-rs = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
rspotify = { version = "0.13", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }

[dev-dependencies]
tempfile = "3"
