[package]
name = "feedtui"
version = "0.1.1"
edition = "2021"
description = "A configurable terminal dashboard for stocks, news, sports, and social feeds with a virtual pet companion"
authors = ["malchal"]
license = "MIT"
repository = "https://github.com/muk2/feedtui"
homepage = "https://github.com/muk2/feedtui"
readme = "README.md"
keywords = ["tui", "dashboard", "terminal", "rss", "stocks"]
categories = ["command-line-utilities"]

[lib]
name = "feedtui"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "feedtui"
path = "src/main.rs"

[features]
default = []
ffi = []

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
feed-rs = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
urlencoding = "2"
open = "5"
textwrap = "0.16"

[dev-dependencies]
tempfile = "3"
